changed from labels to h5 for alignment purposes

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                                 message: 'The captcha is required'
                             },
                             regexp: {
-                                regexp: /^[Y]+[U]+[4]+[R]+[T]$/,
+                                regexp: /^[W]+[9]+[3]+[B]+[X]$/,
                                 message: 'The captcha is invalid'
                             }
                         }
@@ -445,7 +445,7 @@
                                 message: 'The captcha is required'
                             },
                             regexp: {
-                                regexp: /^[Y]+[U]+[4]+[R]+[T]$/,
+                                regexp: /^[R]+[B]+[S]+[K]+[W]$/,
                                 message: 'The captcha is invalid'
                             }
                         }
@@ -460,7 +460,7 @@
                                 message: 'The captcha is required'
                             },
                             regexp: {
-                                regexp: /^[Y]+[U]+[4]+[R]+[T]$/,
+                                regexp: /^[6]+[H]+[3]+[T]+[8]$/,
                                 message: 'The captcha is invalid'
                             }
                         }
@@ -475,7 +475,7 @@
                                 message: 'The captcha is required'
                             },
                             regexp: {
-                                regexp: /^[Y]+[U]+[4]+[R]+[T]$/,
+                                regexp: /^[B]+[4]+[T]+[9]+[S]$/,
                                 message: 'The captcha is invalid'
                             }
                         }
@@ -490,7 +490,7 @@
                                 message: 'The captcha is required'
                             },
                             regexp: {
-                                regexp: /^[Y]+[U]+[4]+[R]+[T]$/,
+                                regexp: /^[N]+[8]+[C]+[6]+[H]$/,
                                 message: 'The captcha is invalid'
                             }
                         }
@@ -505,7 +505,7 @@
                                 message: 'The captcha is required'
                             },
                             regexp: {
-                                regexp: /^[Y]+[U]+[4]+[R]+[T]$/,
+                                regexp: /^[4]+[N]+[V]+[3]+[A]$/,
                                 message: 'The captcha is invalid'
                             }
                         }
@@ -520,7 +520,7 @@
                                 message: 'The captcha is required'
                             },
                             regexp: {
-                                regexp: /^[Y]+[U]+[4]+[R]+[T]$/,
+                                regexp: /^[C]+[4]+[6]+[U]+[5]$/,
                                 message: 'The captcha is invalid'
                             }
                         }
@@ -535,7 +535,7 @@
                                 message: 'The captcha is required'
                             },
                             regexp: {
-                                regexp: /^[Y]+[U]+[4]+[R]+[T]$/,
+                                regexp: /^[R]+[4]+[8]+[E]+[K]$/,
                                 message: 'The captcha is invalid'
                             }
                         }
