--- a/result.html
+++ b/result.html
@@ -148,110 +148,118 @@
 
         <!-- first name -->
         <div class="row">
-            <label class="col-xs-3 control-label">First Name</label>
-            <label class="col-xs-4 control-label">
+            <h5 style="text-align: right;" class="col-xs-3 control-h5 style="text-align: right;"">First Name</h5 style="text-align: right;">
+            <h5 style="text-align: left;" class="col-xs-4 control-h5 style="text-align: right;"">
                 <script LANGUAGE="JavaScript">document.write(replacedFirstName);</script>
-            </label>
+            </h5 style="text-align: right;">
         </div>
 
         <!--  last name -->
         <div class="row">
-            <label class="col-xs-3 control-label">Last Name</label>
-            <label class="col-xs-4 control-label">
+            <h5 style="text-align: right;" class="col-xs-3 control-h5 style="text-align: right;"">Last Name</h5 style="text-align: right;">
+            <h5 style="text-align: left;" class="col-xs-4 control-h5 style="text-align: right;"">
                 <script LANGUAGE="JavaScript">document.write(replacedLastName);</script>
-            </label>
+            </h5 style="text-align: right;">
         </div>
 
         <!-- gender -->
         <div class="row">
-            <label class="col-xs-3 control-label">Gender</label>
-            <label class="col-xs-4 control-label">
+            <h5 style="text-align: right;" class="col-xs-3 control-h5 style="text-align: right;"">Gender</h5 style="text-align: right;">
+            <h5 style="text-align: left;" class="col-xs-4 control-h5 style="text-align: right;"">
                 <script LANGUAGE="JavaScript">document.write(gender);</script>
-            </label>
+            </h5 style="text-align: right;">
         </div>
 
         <!-- education -->
         <div class="row">
-            <label class="col-xs-3 control-label">Highest Education</label>
-            <label class="col-xs-4 control-label">
+            <h5 style="text-align: right;" class="col-xs-3 control-h5 style="text-align: right;"">Highest Education</h5 style="text-align: right;">
+            <h5 style="text-align: left;" class="col-xs-4 control-h5 style="text-align: right;"">
                 <script LANGUAGE="JavaScript">document.write(replacedEducation);</script>
-            </label>
+            </h5 style="text-align: right;">
         </div>
 
         <!-- phone number -->
         <div class="row">
-            <label class="col-xs-3 control-label">Phone Number</label>
-            <label class="col-xs-4 control-label">
+            <h5 style="text-align: right;" class="col-xs-3 control-h5 style="text-align: right;"">Phone Number</h5 style="text-align: right;">
+            <h5 style="text-align: left;" class="col-xs-4 control-h5 style="text-align: right;"">
                 <script LANGUAGE="JavaScript">document.write(phone);</script>
-            </label>
+            </h5 style="text-align: right;">
         </div>
 
         <!-- email -->
         <div class="row">
-            <label class="col-xs-3 control-label">Email Address</label>
-            <label class="col-xs-4 control-label">
+            <h5 style="text-align: right;" class="col-xs-3 control-h5 style="text-align: right;"">Email Address</h5 style="text-align: right;">
+            <h5 style="text-align: left;" class="col-xs-4 control-h5 style="text-align: right;"">
                 <script LANGUAGE="JavaScript">document.write(replacedEmail);</script>
-            </label>
+            </h5 style="text-align: right;">
         </div>
 
         <!-- date -->
         <div class="row">
-            <label class="col-xs-3 control-label">Date</label>
-            <label class="col-xs-4 control-label">
+            <h5 style="text-align: right;" class="col-xs-3 control-h5 style="text-align: right;"">Date</h5 style="text-align: right;">
+            <h5 style="text-align: left;" class="col-xs-4 control-h5 style="text-align: right;"">
                 <script LANGUAGE="JavaScript">document.write(replacedDate);</script>
-            </label>
+            </h5 style="text-align: right;">
         </div>
 
         <div class="page-header">
             <h4 style='text-align: left;'>Location</h4>
         </div>
 
+        <div class="row">
+            <h5 style="text-align: right;" class="col-xs-3 control-h5 style="text-align: right;"">Google Maps</h5 style="text-align: right;">
+            <h5 style="text-align: left;" class="col-xs-4 control-h5 style="text-align: right;"">
+
+              <div id="map" style="width:400px;height:400px;background:white"></div>
+            </h5 style="text-align: right;">
+        </div>
+
         <!--  street -->
         <div class="row">
-            <label class="col-xs-3 control-label">Street</label>
-            <label class="col-xs-4 control-label">
+            <h5 style="text-align: right;" class="col-xs-3 control-h5 style="text-align: right;"">Street</h5 style="text-align: right;">
+            <h5 style="text-align: left;" class="col-xs-4 control-h5 style="text-align: right;"">
                 <script LANGUAGE="JavaScript">document.write(replacedStreet);</script>
-            </label>
+            </h5 style="text-align: right;">
         </div>
 
         <!-- city -->
         <div class="row">
-            <label class="col-xs-3 control-label">City</label>
-            <label class="col-xs-4 control-label">
+            <h5 style="text-align: right;" class="col-xs-3 control-h5 style="text-align: right;"">City</h5 style="text-align: right;">
+            <h5 style="text-align: left;" class="col-xs-4 control-h5 style="text-align: right;"">
                 <script LANGUAGE="JavaScript">document.write(replacedCity);</script>
-            </label>
+            </h5 style="text-align: right;">
         </div>
 
         <!-- state -->
         <div class="row">
-            <label class="col-xs-3 control-label">State</label>
-            <label class="col-xs-4 control-label">
+            <h5 style="text-align: right;" class="col-xs-3 control-h5 style="text-align: right;"">State</h5 style="text-align: right;">
+            <h5 style="text-align: left;" class="col-xs-4 control-h5 style="text-align: right;"">
                 <script LANGUAGE="JavaScript">document.write(replacedState);</script>
-            </label>
+            </h5 style="text-align: right;">
         </div>
 
         <!-- zip code -->
         <div class="row">
-            <label class="col-xs-3 control-label">Zip Code</label>
-            <label class="col-xs-4 control-label">
+            <h5 style="text-align: right;" class="col-xs-3 control-h5 style="text-align: right;"">Zip Code</h5 style="text-align: right;">
+            <h5 style="text-align: left;" class="col-xs-4 control-h5 style="text-align: right;"">
                 <script LANGUAGE="JavaScript">document.write(replacedZipCode);</script>
-            </label>
+            </h5 style="text-align: right;">
         </div>
 
         <!-- category -->
         <div class="row">
-            <label class="col-xs-3 control-label">Category</label>
-            <label class="col-xs-4 control-label">
+            <h5 style="text-align: right;" class="col-xs-3 control-h5 style="text-align: right;"">Category</h5 style="text-align: right;">
+            <h5 style="text-align: left;" class="col-xs-4 control-h5 style="text-align: right;"">
                 <script LANGUAGE="JavaScript">document.write(replacedCategory);</script>
-            </label>
+            </h5 style="text-align: right;">
         </div>
 
         <!-- comment -->
         <div class="row">
-            <label class="col-xs-3 control-label">Comment</label>
-            <label class="col-xs-4 control-label">
+            <h5 style="text-align: right;" class="col-xs-3 control-h5 style="text-align: right;"">Comment</h5 style="text-align: right;">
+            <h5 style="text-align: right;" class="col-xs-4 control-h5 style="text-align: right;"">
                 <script LANGUAGE="JavaScript">document.write(replacedComment);</script>
-            </label>
+            </h5 style="text-align: right;">
         </div>
 
 
@@ -261,10 +269,10 @@
 
         <!-- terms -->
         <div class="row">
-            <label class="col-xs-3 control-label">Terms and Agreement</label>
-            <label class="col-xs-4 control-label">
-                <script LANGUAGE="JavaScript">document.write(replacedTerms);</script>
-            </label>
+            <h5 style="text-align: right;" class="col-xs-3 control-h5 style="text-align: right;"">Terms and Agreement</h5 style="text-align: right;">
+            <h5 style="text-align: left;" class="col-xs-4 control-h5 style="text-align: right;"">
+                <script LANGUAGE="JavaScript">document.write('Accepted');</script>
+            </h5 style="text-align: right;">
         </div>
 
         <div class="page-header">
@@ -273,18 +281,10 @@
 
         <!-- captcha -->
         <div class="row">
-            <label class="col-xs-3 control-label">Captcha</label>
-            <label class="col-xs-4 control-label">
+            <h5 style="text-align: right;" class="col-xs-3 control-h5 style="text-align: right;"">Captcha</h5 style="text-align: right;">
+            <h5 style="text-align: left;" class="col-xs-4 control-h5 style="text-align: right;"">
                 <script LANGUAGE="JavaScript">document.write("Verified");</script>
-            </label>
-        </div>
-
-        <div class="row">
-            <label class="col-xs-3 control-label">Google Maps</label>
-            <label class="col-xs-4 control-label">
-
-              <div id="map" style="width:400px;height:400px;background:white"></div>
-            </label>
+            </h5 style="text-align: right;">
         </div>
 
     </div>
@@ -301,7 +301,7 @@
         });
         var geocoder = new google.maps.Geocoder();
         //var address = '3654 Baldwin Hills Court South San Francisco';
-        var address = replacedStreet + replacedCity;
+        var address = replacedStreet + replacedCity + replacedState + replacedZipCode;
         geocodeAddress(geocoder, map, address)
         // document.getElementById('submit').addEventListener('click', function() {
         //   geocodeAddress(geocoder, map);
