testing for validation

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                         <!-- buttons -->
                         <div class="form-group">
                             <div class="col-lg-9 col-lg-offset-3">
-                                <button type="button" class="btn btn-info" style="color: red;" id="resetBtn">Reset form</button>
+                                <button type="button" class="btn btn-info" id="resetBtn">Reset form</button>
                                 <button type="button" class="btn btn-info" id="validateBtn">Manual validate</button>
                                 <button type="submit" class="btn btn-primary" value="Submit">Submit</button>
                             </div>
